AWS/VPC_and_SecurityGroup/VPC_and_SecurityGroup.tf
# Define the AWS provider configuration
provider "aws" {
  region = "us-east-1"
}



# Create a new VPC if it doesn't exist, or use an existing one
resource "aws_vpc" "demo" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "demo-vpc"
  }
}

# Create a new security group
resource "aws_security_group" "example" {
  name        = "example"
  description = "Example Security Group"

  tags = {
    Name = "demo-sg"
  }

  // Define your security group rules here
  // For example, allow SSH and HTTP traffic
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = aws_vpc.demo.id
}
